@@ -1,3 +1,8 @@
+2011-12-08  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dirread.c, libtiff/tif_read.c: more cautious checking
+	of _TIFFFillStriles() results (#gdal 4372)
+
 2011-12-07  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_dirread.c: fixes to deal with invalid files where
